<resources>
    <string name="app_name">DroidCafeV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

	<string name="header_desserts">Droid Desserts</string>
	<string name="header_burgers">Droid Hamburgers</string>
	<string name="header_drinks">Droid Drinks</string>
	<string name="donuts">Donuts are glazed and sprinkled with candy.</string>
	<string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
	<string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
	<string name="donut_order_message">You ordered a donut.</string>
	<string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
	<string name="froyo_order_message">You ordered a FroYo.</string>
	<string name="order_name_label">Name</string>
	<string name="order_header_txt">Order:</string>
	<string name="enter_name_hint">Enter customer name</string>
	<string name="order_address_label">Address</string>
	<string name="enter_address_hint">Enter the address</string>
	<string name="order_phone_label">Phone</string>
	<string name="enter_phone_hint">Enter phone number</string>
	<string name="order_note_label">Note</string>
	<string name="enter_note_hint">Write a note if necessary</string>
	<string name="order_delivery_label">Choose a delivery method:</string>
	<string name="action_contact">Contact</string>
	<string name="action_order">Order</string>
	<string name="action_status">Status</string>
	<string name="action_favorites">Favorites</string>
	<string name="label_order_activity">Order Activity</string>
	<string-array name="phone_types">
		<item>Home</item>
		<item>Mobile</item>
		<item>Work</item>
	</string-array>

	<!-- TODO: Remove or change this placeholder text -->

	<string name="milk_shake_desc">Made with ice cream, milk, and any additional flavors, it’s a well-loved
        companion to a burger and fries or simply enjoyed alone as sweet treat.
    </string>
	<string name="nat_juice_desc">Juice is a drink made from the extraction or pressing of the natural liquid contained
        in fruit and vegetables.
    </string>
	<string name="fountain_soda_desc">Your favorite ice cold soda anytime, at the push of a button, carbonated flavors,
        and 1 non-carbonated, plus you get Ice cold Soda Water, and Ice
    </string>
	<string name="cuban_burger_desc">Cuban Sandwich Burger. A simply seasoned ground pork patty combined with deli ham,
        Swiss cheese and mustard on a crusty burger bun.
    </string>
	<string name="sriracha_burger_desc">A Peanut Butter Sriracha Bacon Cheeseburger combines sweet, salty smoky and
        spicy flavours into a taste explosion of a burger.
    </string>
	<string name="barbecue_burger_desc">Barbecue Bacon Cheddar Sliders. A terrific way to feed the crowd at parties,
        cookouts, while tailgating or just for a casual pot luck dinner.
    </string>

</resources>


