<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
>
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
            <TextView android:id="@+id/label_desserts"
                      android:text="@string/header_desserts" android:textStyle="bold" android:textSize="24sp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="24dp"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
            />
            <ImageView android:id="@+id/donut"
                       app:srcCompat="@drawable/img_donut_circle"
                       android:contentDescription="@string/donuts"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="24dp"
                       android:layout_marginStart="24dp"
                       app:layout_constraintTop_toBottomOf="@+id/label_desserts"
                       app:layout_constraintStart_toStartOf="parent"

            />
            <TextView android:id="@+id/donut_description"
                      android:text="@string/donuts"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="@+id/donut"
                      app:layout_constraintStart_toEndOf="@+id/donut"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginTop="24dp"
                      android:layout_marginStart="24dp"
                      android:layout_marginEnd="24dp"
            />
            <ImageView android:id="@+id/ice_cream"
                       app:srcCompat="@drawable/img_icecream_circle"
                       android:contentDescription="@string/ice_cream_sandwiches"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintTop_toBottomOf="@+id/donut"
                       app:layout_constraintStart_toStartOf="parent"
                       android:layout_marginTop="24dp"
                       android:layout_marginStart="24dp"
            />
            <TextView android:id="@+id/ice_cream_description"
                      android:text="@string/ice_cream_sandwiches"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="@+id/ice_cream"
                      app:layout_constraintStart_toEndOf="@+id/ice_cream"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginTop="24dp"
                      android:layout_marginStart="24dp"
                      android:layout_marginEnd="24dp"
            />
            <ImageView android:id="@+id/froyo"
                       app:srcCompat="@drawable/img_froyo_circle"
                       android:contentDescription="@string/froyo"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       app:layout_constraintTop_toBottomOf="@+id/ice_cream"
                       app:layout_constraintStart_toStartOf="parent"
                       android:layout_marginTop="24dp"
                       android:layout_marginStart="24dp"
            />
            <TextView android:id="@+id/froyo_description"
                      android:text="@string/froyo"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="@+id/froyo"
                      app:layout_constraintStart_toEndOf="@+id/froyo"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginTop="24dp"
                      android:layout_marginEnd="24dp"
                      android:layout_marginStart="24dp"
            />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

