<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
>
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        >
            <TextView android:id="@+id/header_drinks"
                      android:text="@string/header_drinks" android:textStyle="bold" android:textSize="24sp"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="24dp"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
            />
            <ImageView android:id="@+id/milk_shake"
                       app:srcCompat="@drawable/img_milk_shake"
                       android:contentDescription="@string/milk_shake_desc"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:scaleType="fitXY"
                       android:layout_marginTop="24dp"
                       android:layout_marginStart="24dp"
                       app:layout_constraintTop_toBottomOf="@+id/header_drinks"
                       app:layout_constraintStart_toStartOf="parent"
            />
            <TextView android:id="@+id/milk_shake_desc"
                      android:text="@string/milk_shake_desc"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="@+id/milk_shake"
                      app:layout_constraintStart_toEndOf="@+id/milk_shake"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginTop="6dp"
                      android:layout_marginStart="24dp"
                      android:layout_marginEnd="24dp"
            />
            <ImageView android:id="@+id/nat_juice"
                       app:srcCompat="@drawable/img_nat_juice"
                       android:contentDescription="@string/nat_juice_desc"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:scaleType="fitXY"
                       android:layout_marginTop="24dp"
                       android:layout_marginStart="24dp"
                       app:layout_constraintTop_toBottomOf="@+id/milk_shake"
                       app:layout_constraintStart_toStartOf="parent"
            />
            <TextView android:id="@+id/nat_juice_desc"
                      android:text="@string/nat_juice_desc"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="@+id/nat_juice"
                      app:layout_constraintStart_toEndOf="@+id/nat_juice"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginTop="6dp"
                      android:layout_marginStart="24dp"
                      android:layout_marginEnd="24dp"
            />
            <ImageView android:id="@+id/fountain_soda"
                       app:srcCompat="@drawable/img_fountain_soda"
                       android:contentDescription="@string/fountain_soda_desc"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:scaleType="fitXY"
                       android:layout_marginTop="24dp"
                       android:layout_marginStart="24dp"
                       app:layout_constraintTop_toBottomOf="@+id/nat_juice"
                       app:layout_constraintStart_toStartOf="parent"
            />
            <TextView android:id="@+id/fountain_soda_desc"
                      android:text="@string/fountain_soda_desc"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toTopOf="@+id/fountain_soda"
                      app:layout_constraintStart_toEndOf="@+id/fountain_soda"
                      app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginTop="6dp"
                      android:layout_marginStart="24dp"
                      android:layout_marginEnd="24dp"
            />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

